Fixes linked image double border

--- a/src/css/module/_figure.scss
+++ b/src/css/module/_figure.scss
@@ -148,6 +148,9 @@ figure,
     //
     // Styleguide: figment.children
   }
+  & > a img {
+    border: 0;
+  }
 }
 
 .figure--border {
